--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,9 +1,34 @@
-language: python
-python: "3.9"
-services: docker
-install:
-- pip install -r requirements.txt
-script:
-- echo ‘start docker build’
-- docker build -t flask-app .
-- echo ‘finish docker build
+name: CI/CD
+
+on:
+  push:
+    branches:
+      - master
+
+jobs:
+  build:
+    runs-on: ubuntu-latest
+
+    services:
+      docker:
+
+    steps:
+      - name: Checkout repository
+        uses: actions/checkout@v2
+
+      - name: Setup Python
+        uses: actions/setup-python@v2
+        with:
+          python-version: '3.9'
+
+      - name: Install dependencies
+        run: pip install -r requirements.txt
+
+      - name: Start Docker build
+        run: echo 'start docker build'
+
+      - name: Build Docker image
+        run: docker build -t flask-app .
+
+      - name: Finish Docker build
+        run: echo 'finish docker build'
