--- a/.github/workflows/.travis.yml
+++ b/.github/workflows/.travis.yml
@@ -1,10 +1,10 @@
 name: CI/CD
 
 on:
-  push:
-    branches:
-      - main
-
+  branches:
+    - master
+    - main
+      
 jobs:
   build:
     runs-on: ubuntu-latest
