--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,34 +1,14 @@
-name: CI/CD
+name: Simple Pipeline
 
 on:
-  branches:
-    - master
-    - main
-      
+  push:
+    branches:
+      - '*'
+
 jobs:
-  build:
+  display_message:
     runs-on: ubuntu-latest
 
-    services:
-      docker:
-
     steps:
-      - name: Checkout repository
-        uses: actions/checkout@v2
-
-      - name: Setup Python
-        uses: actions/setup-python@v2
-        with:
-          python-version: '3.9'
-
-      - name: Install dependencies
-        run: pip install -r requirements.txt
-
-      - name: Start Docker build
-        run: echo 'start docker build'
-
-      - name: Build Docker image
-        run: docker build -t flask-app .
-
-      - name: Finish Docker build
-        run: echo 'finish docker build'
+      - name: Display message
+        run: echo "Hello from GitHub Actions!"
