--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -9,6 +9,18 @@ jobs:
   display_message:
     runs-on: ubuntu-latest
 
+    services:
+      docker:
+      
     steps:
       - name: Display message
-        run: echo "Hello from GitHub Actions!"
+        run: echo "start docker build"
+
+      - name: Start Docker build
+        run: echo 'start docker build'
+
+      - name: Build Docker image
+        run: docker build -t flask-app .
+
+      - name: Finish Docker build
+        run: echo 'finish docker build'
